--- a/data/report_template.html
+++ b/data/report_template.html
@@ -21,12 +21,14 @@
         }
 
         #content {
-            width: 700px;
+            width: 80%;
             padding:  24px 12px;
-            margin:0px auto;
+            margin:0px auto 3em;
             background: #f6f6f6;
             border-right: 2px solid #bbb;
             border-left: 1px solid #bbb;
+            border-bottom: 1px solid #bbb;
+            overflow:  hidden;
         }
 
         th, td {
@@ -141,6 +143,13 @@
     <script type="text/javascript">
         var facts = $facts;
 
+        // for some weird reason, tags is an array like 
+        // ["t", "a", "g", ",", "", "t", "a", "g", "2"]
+        // so fix tags by joining and spliting...
+        for (var i=0; i < facts.length; i++) {
+            facts[i].tags = facts[i].tags.join('').split(',');
+        }
+
         function showChart(target, data) {
             totals = []
             // turn object into a list of tuples and convert durations from seconds to hours
@@ -216,7 +225,6 @@
             $("#grand_total").text("(" + grandTotal + ")");
 
 
-
             showChart($("#category_chart"), categoryTotals)
             showChart($("#activity_chart"), activityTotals)
             showChart($("#tag_chart"), tagTotals)
@@ -256,8 +264,7 @@
 
 
             $("#activity_log_link").click(function() {
-                $("#activity_log").toggle();
-                return false;
+                $("#activity_log").toggle()
             })
 
             $("#show_details").click(function() {
@@ -280,12 +287,18 @@
             })
 
             populateFactTable();
+            nl2br_descriptions();
 
 
             $(".by_day_controls input").click(function(){
                 populateFactTable();
             });
         });
+
+
+        function nl2br_descriptions() {
+            $.each($("#activity_log td.description"), function(i, val){val.innerHTML = val.innerHTML.replace(/\n/g,"<br />");})
+        }
 
 
         function populateFactTable() {
@@ -315,7 +328,10 @@
                 var factTotals = {}
                 for (var j in dateFacts[i][1]) {
                     var fact = dateFacts[i][1][j];
-                    fact.tags = fact.tags.join(", ");
+                    // for some weird reason, tags is an array like 
+                    // ["t", "a", "g", ",", "", "t", "a", "g", "2"]
+                    // so fix tags by joining and spliting and joining again...
+                    fact.tags = fact.tags.join('').split(',').join(", ");
 
                     if (keys.length > 0) {
                         var key = [];
@@ -352,7 +368,7 @@
 
     <div id="date_chart"></div>
 
-    <a id="activity_log_link" href="#">Show activity log</a>
+    <a id="activity_log_link" href="javascript:void(0)">Show activity log</a>
     <div id="activity_log">
         <h2>$activity_log_title</h2>
         <table>
@@ -387,7 +403,7 @@
                         <!-- there is also duration_decimal and duration_minutes -->
                         $duration
                     </td>
-                    <td>$description</td>
+                    <td class="description">$description</td>
                 </tr>
             </all_activities>
         </table>
@@ -395,42 +411,39 @@
 
 
 
-    <table>
-        <tr style="vertical-align: top">
-            <td style="width: 100%">
+    <div id="report-totals" style="overflow-hidden">
+        <div class="col1" style="float: left;">
+            <h2>$totals_by_day_title</h2>
 
-                <h2>$totals_by_day_title</h2>
+            <div class="by_day_controls">
+                $show_prompt
+                <input type="checkbox" id="show_activities" checked="checked"></input>
+                <label for="show_details">$activity_totals_heading</label>
 
-                <div class="by_day_controls">
-                    $show_prompt
-                    <input type="checkbox" id="show_activities" checked="checked"></input>
-                    <label for="show_details">$activity_totals_heading</label>
+                <input type="checkbox" id="show_categories" checked="checked"></input>
+                <label for="show_totals">$category_totals_heading</label>
 
-                    <input type="checkbox" id="show_categories" checked="checked"></input>
-                    <label for="show_totals">$category_totals_heading</label>
+                <input type="checkbox" id="show_tags" checked="checked"></input>
+                <label for="show_totals">$tag_totals_heading</label>
+            </div>
 
-                    <input type="checkbox" id="show_tags" checked="checked"></input>
-                    <label for="show_totals">$tag_totals_heading</label>
-                </div>
-
-                <table id="date_facts"></table>
-            </td>
-            <td>
-                <div>
-                    <h2>Categories</h2>
-                    <div id="category_chart"></div>
-                </div>
-                <div>
-                    <h2>Activities</h2>
-                    <div id="activity_chart"></div>
-                </div>
-                <div>
-                    <h2>Tags</h2>
-                    <div id="tag_chart"></div>
-                </div>
-            </td>
-        </tr>
-    </table>
+            <table id="date_facts"></table>
+        </div>
+        <div class="col2" style="float: right;">
+            <div>
+                <h2>Categories</h2>
+                <div id="category_chart"></div>
+            </div>
+            <div>
+                <h2>Activities</h2>
+                <div id="activity_chart"></div>
+            </div>
+            <div>
+                <h2>Tags</h2>
+                <div id="tag_chart"></div>
+            </div>
+        </div>
+    </div>
 
 
 
